22 Oct 2014: Wouter
	- Test for wildcard fix (from 3.2).

16 Oct 2014: Wouter
	- Fixes for wildcard addition and deletion, speedup for some cases.

15 Oct 2014: Wouter
	- Fix that queries for noname CH TXT are REFUSED instead of nodata.

14 Oct 2014: Wouter
	- per zone statistics with --enable-zone-stats, configure with
	  zonestats: "zonestatidentifier", zones with the same id are added.

10 Oct 2014: Wouter
	- Fix #616: retry xfer for zones with no content after command.
	- Fix char used as array index warnings on NetBSD.

8 Oct 2014: Wouter
	- Fix "xfrd_handle_ipc: bad mode" log errors when compiled 
	  with --disable-bind8-stats.

18 Sep 2014: Wouter
	- Fix that expired zones stay expired after a server restart.

15 Sep 2014: Wouter
	- RFC 7344: CDS and CDNSKEY (read in).

4 Sep 2014: Wouter
	- Tag 4.1.0.
	- trunk is 4.1.1 in development.
	- fix manpage for nsd-checkzone to have version and date.

29 Aug 2014: Wouter
	- Fix install of the nsd-checkconf man page.

28 Aug 2014: Wouter
	- Tag 4.1.0rc1

25 Aug 2014: Wouter
	- Increased default --with-max-ips from 8 to 16, this increases the
	  number of interfaces you can specify in nsd.conf to listen to.

19 Aug 2014: Wouter
	- Remove .LP after .SH in man pages.

7 Aug 2014: Wouter
	- Fix for process swap of main and reload, reload failure from the
	  pipe is acted on, and reload fail not cause nsd to shutdown, also
	  ignore sigchlds from the servermain in reload, that would cause
	  EINTR to break file reads.
	- trunk has version 4.1.

5 Aug 2014: Wouter
	- Fix #600: document that provide-xfr provides AXFR and not IXFR.
	- remove program group fix, because it is not needed.
	- Fix rising-load-average or memory-leaks in OSes (Linux since 2.6),
	  that keep track of all past process parents, or leak memory
	  for them.  Fix makes it so there is no very deep string of
	  process parents.
	  The reload process is now the process parent of servermain.  That